--- a/css/styles.css
+++ b/css/styles.css
@@ -47,7 +47,19 @@
 .option-input.radio::after {
   border-radius: 50%;
 }
-
+.pizzaOrder {
+  display: block;
+  width: 300px;
+  height: 100px;
+  border: 1px solid #000;
+  padding: 15px;
+}
+.cost {
+  font-weight: bold;
+  text-align: right;
+  font-size: 16px;
+  display: block;
+}
 body {
   display: -webkit-box;
   display: -moz-box;
