--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,7 @@
 .pizzaOrder {
   display: block;
   width: 300px;
-  height: 100px;
+  min-height: 100px;
   border: 1px solid #000;
   padding: 15px;
 }
@@ -58,7 +58,11 @@
   font-weight: bold;
   text-align: right;
   font-size: 16px;
-  display: block;
+  margin: 0px;
+  border: 1px solid #000;
+}
+.orderNumber {
+  text-align: left;
 }
 body {
   display: -webkit-box;
@@ -68,7 +72,6 @@ body {
   background: #e8ebee;
   color: #9faab7;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
-
 }
 
 body label {
