add bg image and covert theme to dark

--- a/css/styles.css
+++ b/css/styles.css
@@ -17,7 +17,7 @@ h1 {
   height: 40px;
   width: 40px;
   transition: all 0.15s ease-out 0s;
-  background: #cbd1d8;
+  background: #84898e;
   border: none;
   color: #fff;
   cursor: pointer;
@@ -56,9 +56,9 @@ h1 {
   display: block;
   width: 300px;
   min-height: 100px;
-  background-color: #FFFFFF;
+  background-color: #292929;
   padding: 15px;
-  margin: 5px;
+  margin: 0 0 10px 0;
 }
 .cost {
   font-weight: bold;
@@ -78,11 +78,16 @@ body {
   display: -moz-box;
   display: -ms-flexbox;
   display: box;
-  background: #f2f2f2;
-  color: #292929;
+  background: #000000;
+  color: #F2F2F2;
   font-family: "Helvetica Neue", "Helvetica", "Roboto", "Arial", sans-serif;
+  background-image: url("../img/pizzabg.png");
+  background-size: 100%;
+  background-repeat: no-repeat;
 }
-
+.bgs {
+  background-color: rgba(29,29,29,.95);
+}
 body label {
   display: block;
   line-height: 40px;
